# project-steps

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/components/: ConfirmationModal.jsx  ContextMenu.jsx  DarkModeToggle.jsx  ImageThumbnails.jsx  InputModal.jsx  NoteCard.jsx  NoteModal.jsx  ProjectList.jsx  ProjectNotes.jsx  ProjectSteps.jsx  QuillWithImages.jsx  SortDropdown.jsx  StepModal.jsx  ThumbnailModal.jsx
src/contexts/: DarkModeContext.jsx
src/utils/: imageUtils.js  storage.js  undoRedoSystem.js
